tests/const_fn/01_fixnum_const_bad_str_with_too_long_fractional_part.stderr
error[E0080]: evaluation of constant value failed
   --> src/const_fn.rs
    |
    |     const_assert!(exp <= coef);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)
    |
note: inside `fixnum::_priv::parse_fixed`
   --> src/const_fn.rs
    |
    |     const_assert!(exp <= coef);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `VALUE_INNER`
   --> tests/const_fn/01_fixnum_const_bad_str_with_too_long_fractional_part.rs:7:36
    |
7   | const VALUE: FixedPoint<i64, U9> = fixnum_const!(0.1234567891, 9);
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `const_assert` which comes from the expansion of the macro `fixnum_const` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
 --> tests/const_fn/01_fixnum_const_bad_str_with_too_long_fractional_part.rs:7:36
  |
7 | const VALUE: FixedPoint<i64, U9> = fixnum_const!(0.1234567891, 9);
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this note originates in the macro `fixnum_const` (in Nightly builds, run with -Z macro-backtrace for more info)
